--- a/storage/pages/zcSpare/zcSpare.wxml
+++ b/storage/pages/zcSpare/zcSpare.wxml
@@ -8,7 +8,7 @@
                         <text>1、感谢您对我们的支持与信任，我们将带着您的这份支持向梦想迈进。</text>
                     </view>
                     <view>
-                        <text>2、对于非全额支持项目的打赏用户，我们将依据您打赏的金额，按比例进行概率抽取幸运星获得项目产品。例如：本项目全额100元，有11人打赏，其中10人每人1元打赏，另外1人是90元打赏，总计筹得费用100元，那么项目成功众筹了1份产品！虽然这11个用户都有权获得该商品，但是其中支持90元的用户获得该产品的概率是：90%，其他人为10%</text>
+                        <text>2、对于非全额支持项目的打赏用户，我们将依据您打赏的金额，按比例进行概率抽取幸运星获得项目产品。例如：本项目全额100元，有11人打赏，其中10人每人1元打赏，另外1人是90元打赏，总计筹得费用100元，那么项目成功预定了1份产品！虽然这11个用户都有权获得该商品，但是其中支持90元的用户获得该产品的概率是：90%，其他人为10%</text>
                     </view>
                     <view class="read">
                         <text>秒懂以上规则，这就支持该项目：</text>
