--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -26,7 +26,7 @@
   <view class="nav">
     <view class="this">普通订单</view>
     <view class="" bindtap="go" data-id="/storage/pages/zcOrder/zcOrder" wx:if="{{version == 3}}">
-      众筹订单
+      预定订单
     </view>
     <view class="" bindtap="go" wx:if="{{version == 3}}">定制订单</view>
     <view class="" bindtap="go" data-id="../integral_order/integral_order">积分订单</view>
