--- a/pages/forget_password/forget_password.wxml
+++ b/pages/forget_password/forget_password.wxml
@@ -9,11 +9,11 @@
       </view> -->
       <view class="section">
         <view class="section_title">新的支付密码</view>
-        <input name="harvester_password" placeholder="请输入新密码" value="" bindblur="bindoldChange" type="number" password />
+        <input name="harvester_password" placeholder="请输入新密码" value="" bindblur="bindoldChange" type="number" password maxlength='6'/>
       </view>
       <view class="section">
         <view class="section_title">重新输入密码</view>
-        <input name="harvester_new_password" placeholder="请重新输入新密码" value="" bindblur="bindoldChange1" type="number" password />
+        <input name="harvester_new_password" placeholder="请重新输入新密码" value="" bindblur="bindoldChange1" type="number" password maxlength='6' />
       </view>
       <view class="section">
         <view class="section_title">验证码</view>
