--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -36,7 +36,7 @@ swiper.swiper-container{height: 93%;}
 .retract{text-align: center; background-color: #d7d7d7;}
 .retract .icon-retract{width: 50rpx; height: 50rpx;}
 .storage-enviroment{border: 1px solid #d7d7d7; box-sizing: border-box; height: 60rpx; display: flex; align-items: center;}
-.storage-enviroment .storage-name-box{display: flex; align-items: center; flex-basis: 25%; height: 100%;}
+.storage-enviroment .storage-name-box{display: flex; align-items: center; flex-basis: 46%; height: 100%;justify-content: center;}
 .storage-enviroment .storage-name-box image{width: 40rpx; height: 40rpx; margin: 0 10rpx;}
 .storage-enviroment .storage-name-box .storage-name{color: #999900; font-size: 28rpx; white-space: nowrap;}
 .enviroment-data-box{flex: 75%; height: 100%; background-color: #d7d7d7; display: flex; align-items: center; justify-content: space-around; padding-right: 20rpx;}
