--- a/pages/circle/circle.wxml
+++ b/pages/circle/circle.wxml
@@ -4,9 +4,9 @@
   <view class='nav-list clear'>
     <view class='list list-one' wx:for="{{ico}}">
       <navigator url="/storage/pages/meeting/meeting?title={{item.id}}&tid={{item.tid}}">
-        <view class='ico'>
+        <!-- <view class='ico'>
           <image src='{{url}}{{item.icon_image}}'></image>
-        </view>
+        </view> -->
         <text class='text'>{{item.name}}</text>
       </navigator>
     </view>
