--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -1,7 +1,7 @@
 <!--pages/select_address/select_address.wxml-->
 <view class='all'>
 	<radio-group class="radio-group"  wx:if="{{address.info!='没有填写地址记录'}}" bindchange="radioChange" data-id="{{item.id}}" >
-		<view class='content_list' wx:for='{{address}}'>
+		<view class='content_list' wx:for='{{address}}' wx:key="index">
 			<view class="radio" >
 				<radio value="{{item.id}}" color='#02A0E6' checked = "{{item.status == 1 ? 'true':''}}" />
 			</view>
