--- a/pages/password/password.wxml
+++ b/pages/password/password.wxml
@@ -2,14 +2,14 @@
 <form bindsubmit="formSubmit" bindreset="formReset">
   <view class=''>
     <view class="password">
-      <input name="harvester" placeholder="请设置6位支付密码" type="number" password value="{{valuea}}" bindchange="typea" wx:if="{{typea}}" />
-      <input name="harvester" placeholder="请设置6位支付密码" type="number" value="{{valuea}}" bindchange="typea" wx:else />
+      <input name="harvester" placeholder="请设置6位支付密码" type="number" password value="{{valuea}}" bindchange="typea" wx:if="{{typea}}"  maxlength='6'/>
+      <input name="harvester" placeholder="请设置6位支付密码" type="number" value="{{valuea}}" bindchange="typea" maxlength='6' wx:else />
       <image src="http://zhihuichacang.com/u10947.png" mode="widthFix" lazy-load="false" class="no_see" wx:if="{{typea}}" bindtap="to_see" data-id="type1"></image>
       <image src="http://zhihuichacang.com/u10949.png" mode="widthFix" lazy-load="false" class="no_see" bindtap="to_nosee" wx:else data-id="type1"></image>
     </view>
     <view class="repassword">
-      <input name="harvester_phone_num" placeholder="请再次输入支付密码" type="number" password value="{{valueb}}" bindchange="typeb" wx:if="{{typeb}}" />
-      <input name="harvester_phone_num" placeholder="请再次输入支付密码" type="number" value="{{valueb}}" bindchange="typeb" wx:else />
+      <input name="harvester_phone_num" placeholder="请再次输入支付密码" type="number" password value="{{valueb}}" bindchange="typeb" wx:if="{{typeb}}" maxlength='6'/>
+      <input name="harvester_phone_num" placeholder="请再次输入支付密码" type="number" value="{{valueb}}" bindchange="typeb" maxlength='6' wx:else />
       <image src="http://zhihuichacang.com/u10947.png" mode="widthFix" class="no_see" wx:if="{{type2}}" bindtap="to_see" data-id="type2"></image>
       <image src="http://zhihuichacang.com/u10949.png" mode="widthFix" lazy-load="false" class="no_see" bindtap="to_nosee" data-id="type2" wx:else></image>
     </view>
