--- a/sweep/pages/sweep_detail/sweep_detail.wxml
+++ b/sweep/pages/sweep_detail/sweep_detail.wxml
@@ -1,40 +1,54 @@
 <view class="all">
   <view class="img_content">
-      <image class="img" src="https://teahouse.siring.cn/image1345901.png" mode="widthFix" lazy-load="false" binderror="" bindload="" />
+    <image class="img" src="https://teahouse.siring.cn/image1345901.png" mode="widthFix" lazy-load="false" binderror="" bindload="" />
+    <view>
+      <view>
+        <text class="monicker">品名：</text>
+        {{goods.goods_name}}
+      </view>
+      <view>
+        <text class="monicker">类别：</text>
+        {{goods.goods_type}}
+      </view>
+      <view>
+        <text class="monicker">品牌：</text>
+        {{goods.goods_brand}}
+      </view>
+    </view>
   </view>
   <view class="list_content">
     <view class="lista">
-      <view class="lefta">NFC ID： </view>
+      <view class="lefta">NFC ID：</view>
       <view class="righta">{{goods.child_code}}</view>
     </view>
     <view class="lista">
-      <view class="lefta"> 产品总量： </view>
+      <view class="lefta">产品总量：</view>
       <view class="righta">{{goods.goods_repertory}}{{goods.unit}}</view>
     </view>
     <view class="lista">
-      <view class="lefta"> 产品编号： </view>
+      <view class="lefta">产品编号：</view>
       <view class="righta">{{goods.goods_number}}</view>
     </view>
   </view>
   <view class="list_content">
     <view class="lista">
-      <view class="lefta"> 出品商： </view>
+      <view class="lefta">出品商：</view>
       <view class="righta">{{goods.produce}}</view>
     </view>
     <view class="lista">
-      <view class="lefta">品牌： </view>
+      <view class="lefta">品牌：</view>
       <view class="righta">{{goods.goods_brand}}</view>
     </view>
     <view class="lista">
-      <view class="lefta"> 产品名称： </view>
+      <view class="lefta">产品名称：</view>
       <view class="righta">{{goods.goods_name}}</view>
     </view>
     <view class="lista">
-      <view class="lefta"> 规格： </view>
+      <view class="lefta">规格：</view>
       <view class="righta">{{goods.pick_size}}</view>
     </view>
     <view class="lista">
-      <view class="lefta"> 原料日期： </view>
+      <view class="lefta">原料日期：</view>
       <view class="righta">{{goods.stock_date}}</view>
     </view>
     <!-- <view class="lista">
@@ -42,48 +56,43 @@
       <view class="righta">2018.09.08 </view>
     </view> -->
     <view class="lista">
-      <view class="lefta"> 包装日期： </view>
-      <view class="righta">{{goods.frement_date}}</view>
-    </view>
-    <view class="lista">
-      <view class="lefta"> 加工日期 </view>
+      <view class="lefta">加工日期</view>
       <view class="righta">{{goods.date}}</view>
     </view>
     <view class="lista">
-      <view class="lefta"> 原产地： </view>
-      <view class="righta">云南 </view>
+      <view class="lefta">包装日期：</view>
+      <view class="righta">{{goods.frement_date}}</view>
+    </view>
+    <view class="lista">
+      <view class="lefta">原产地：</view>
+      <view class="righta">云南</view>
     </view>
     <view class="list_a">
-      <view class="lefta"> 产地定位： </view>
+      <view class="lefta">产地定位：</view>
       <view class="right_content">
         <view class="righta">
           <view class="haiba">海拔1486米</view>
           <view class="haiba">东经108°48′37,北纬26°23′29</view>
         </view>
         <image class="more" src="img/u303.png" mode="widthFix" lazy-load="false" binderror="" bindload="" />
-
       </view>
-    </view> 
+    </view>
   </view>
   <view class="list_content">
-    <view class="title">
-      数据来自终端设备采集 ：
-    </view>
+    <view class="title">数据来自终端设备采集 ：</view>
     <view style="text-align:center;color:rgb(161,161,161);margin:20rpx 0;">暂无数据</view>
-    <view class="logith"  wx:if="{{a}}">
+    <view class="logith" wx:if="{{a}}">
       <view class="time">
         <view class="times">2018年2月18日</view>
         <view class="times">00:23:54</view>
       </view>
-
       <view class="log_content">
         <image class="new_img" src="img/u474.png" mode="widthFix" lazy-load="false" binderror="" bindload="" />
-
         <view class="new">最新</view>
         <view class="log_content_text">
-          <text> 从 </text>
-          <text class="add"> 普洱一号仓库 </text>
-          <text>出库 </text>
+          <text>从</text>
+          <text class="add">普洱一号仓库</text>
+          <text>出库</text>
         </view>
       </view>
     </view>
@@ -94,16 +103,13 @@
       </view>
       <view class="log_content">
         <image class="new_img" src="img/u482.png" mode="widthFix" lazy-load="false" binderror="" bindload="" />
-
         <view class="new" style="opacity: 0;">最新</view>
         <view class="log_content_text">
-          <text> 从 </text>
-          <text class="add"> 普洱一号仓库 </text>
-          <text>出库 </text>
+          <text>从</text>
+          <text class="add">普洱一号仓库</text>
+          <text>出库</text>
         </view>
       </view>
     </view>
-
-
   </view>
 </view>
